--- a/efi/EFI/debian/grub.cfg
+++ b/efi/EFI/debian/grub.cfg
@@ -1,5 +1,5 @@
 # Set prefix
-search --file /MINI --set root
+search --file /DENG --set root
 set prefix=($root)/boot/grub
 
 # Use primary GRUB configuration
