--- a/efi/boot/grub/grub.cfg
+++ b/efi/boot/grub/grub.cfg
@@ -2,23 +2,17 @@
 # Mini Rescue GRUB configuration
 #
 
-search --file /MINI --set root
+search --file /DENG --set root
 set prefix=($root)/boot/grub
 
 insmod all_video
 insmod gfxterm
-insmod png
 terminal_output gfxterm
-loadfont helv-md-12
-loadfont helv-md-14
-loadfont helv-md-18
-loadfont helv-bd-18
-loadfont ascii
+loadfont yuchen
 
 set default=0
-set timeout=5
+set timeout=2
 set gfxmode=auto
-set gfxterm_font="Unifont Regular 16"
 
 function create_menu {
     set desc="$1"
@@ -36,13 +30,11 @@ function create_menu {
 }
 
 menuentry "Mini Rescue $VERSION" --class mini {
-    linux /vmlinuz boot=live quiet splash noprompt nocomponents \
-        setkmap=us
+    linux /vmlinuz boot=live quiet splash noprompt nocomponents setkmap=us
     initrd /initrd
 }
 
-menuentry "Safe video mode" --class screen {
-    linux /vmlinuz boot=live quiet splash noprompt nocomponents \
-        nomodeset toram setkmap=us
+menuentry "Safe video mode" --class safe {
+    linux /vmlinuz boot=live quiet splash noprompt nocomponents nomodeset toram setkmap=us
     initrd /initrd
 }
