Chang grub font

--- a/efi/boot/grub/grub.cfg
+++ b/efi/boot/grub/grub.cfg
@@ -13,6 +13,9 @@ loadfont yuchen
 set default=0
 set timeout=2
 set gfxmode=auto
+set gfxterm_font="Hack Regular 16"
+set color_highlight=yellow/red
+set color_normal=white/black
 
 function create_menu {
     set desc="$1"
