Add distro base on title

--- a/efi/boot/grub/grub.cfg
+++ b/efi/boot/grub/grub.cfg
@@ -32,7 +32,7 @@ function create_menu {
     }
 }
 
-menuentry "Mini Rescue $VERSION" --class mini {
+menuentry "Mini Rescue <$BASE> $VERSION" --class mini {
     linux /vmlinuz boot=live quiet splash noprompt nocomponents setkmap=us
     initrd /initrd
 }
