--- a/efi/boot/grub/grub.cfg
+++ b/efi/boot/grub/grub.cfg
@@ -27,17 +27,17 @@ function create_menu {
     menuentry "$desc" --class $cntry $options {
         shift 1
         set options="$*"
-        linux /vmlinuz boot=live loglevel=1 quiet splash noprompt ${options}
+        linux /vmlinuz boot=live loglevel=1 quiet noprompt ${options}
         initrd /initrd
     }
 }
 
 menuentry "Mini Rescue <$BASE> $VERSION" --class mini {
-    linux /vmlinuz boot=live loglevel=1 quiet splash noprompt nocomponents setkmap=us
+    linux /vmlinuz boot=live loglevel=1 quiet noprompt nocomponents setkmap=us
     initrd /initrd
 }
 
 menuentry "Safe video mode" --class safe {
-    linux /vmlinuz boot=live loglevel=1 quiet splash noprompt nocomponents nomodeset toram setkmap=us
+    linux /vmlinuz boot=live loglevel=1 quiet noprompt nocomponents nomodeset toram setkmap=us
     initrd /initrd
 }
