--- a/efi/boot/grub/grub.cfg
+++ b/efi/boot/grub/grub.cfg
@@ -28,16 +28,16 @@ function create_menu {
         shift 1
         set options="$*"
         linux /vmlinuz boot=live loglevel=0 quiet noprompt ${options}
-        initrd /initrd
+        initrd /initrd.img
     }
 }
 
 menuentry "Mini Rescue <$BASE> $VERSION" --class mini {
     linux /vmlinuz boot=live loglevel=0 quiet noprompt nocomponents setkmap=us
-    initrd /initrd
+    initrd /initrd.img
 }
 
 menuentry "Safe video mode" --class safe {
     linux /vmlinuz boot=live loglevel=0 quiet noprompt nocomponents nomodeset toram setkmap=us
-    initrd /initrd
+    initrd /initrd.img
 }
